// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Areas Multiple Series using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot area"
      clip-path="url(#clip-path-test)"
    >
      <path
        class="area"
        d="M0,100L20,75L40,50L40,100L20,100L0,100Z                                                                            "
        style="fill: rgba(153, 193, 220, 0.7); stroke: rgba(107, 135, 154, 0.7); pointer-events: none;"
      />
      <path
        class="area"
        d="M0,100L100,100L100,100L0,100Z"
      />
    </g>
    <g
      class="g-plot area"
      clip-path="url(#clip-path-test)"
    >
      <path
        class="area"
        d="M0,75L20,50L40,100L40,100L20,100L0,100Z                                                                            "
        style="fill: rgba(252, 153, 142, 0.7); stroke: rgba(176, 107, 99, 0.7); pointer-events: none;"
      />
      <path
        class="area"
        d="M0,100L100,100L100,100L0,100Z"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Areas Stacked using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-area"
      clip-path="url(#clip-path-test)"
    >
      <path
        class="area"
        d="M0,100L100,100L100,100L0,100Z"
        style="fill: #99c1dc; stroke: rgb(107, 135, 154); opacity: 0.7; pointer-events: none;"
      />
      <path
        class="area"
        d="M0,100L100,100L100,100L0,100Z"
        style="fill: #fc998e; stroke: rgb(176, 107, 99); opacity: 0.7; pointer-events: none;"
      />
    </g>
  </svg>
</DocumentFragment>
`;
